--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,9 @@
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">Mon Application</string>
     <string name="hello">bonjour le monde</string>
     <string name="button">mon boutton</string>
+    <string name="first">premier</string>
+    <string name="second">second</string>
+    <string name="message">mon deuxième item</string>
+    <string name="third">troisième</string>
 </resources>
