--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -7,4 +7,5 @@
     <string name="second">second</string>
     <string name="message">my second item</string>
     <string name="third">third</string>
+    <string name="donwloaded">Bieres json downloaded !</string>
 </resources>
