--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="second">second</string>
     <string name="message">mon deuxième item</string>
     <string name="third">troisième</string>
+    <string name="donwloaded">done</string>
 </resources>
